new install instructions

--- a/README
+++ b/README
@@ -57,8 +57,7 @@ $(bf_wend("r2"))
 --------------------------------------- Installation Instruction ---------------------------------------
 
 1. Pull the repository from github: `git clone https://github.com/kspalaiologos/asmbf'
-2. Run the configure script and build asm2bf: `./configure & make all install`
-3. Optional: Add `~/.asmbf' into your PATH.
+2. Run the configure script and build asm2bf: `./configure && sudo make all install`
 
 -------------------------------------- State-of-art Documentation --------------------------------------
 
